# grover-project

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_intro.ipynb
src/grover/: diffuser.py  main.py  oracle.py  simple_oracle.py
